// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`competing style priority 1`] = `
";

() => create(Foo, {}, create(Bar, {
  \\"className\\": \\"Bar_24g\\"
}));

Styles.include(\`
	.Bar_24g { color: orange }
\`);"
`;

exports[`competing style priority 2`] = `
";

() => <Foo><Bar className=\\"Bar_24g\\" /></Foo>;

Styles.include(\`
	.Bar_24g { color: orange }
\`);"
`;
